--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
             <img class="w-16" src="./assets/Group.png" alt="">
             <div>
                 <h1  class="text-3xl font-bold">
-                    $ <span id="main-balance">4500</span>
+                    $ <span id="main-balance">000</span>
                 </h1>
                 <p class="border rounded  p-1">Available Balance</p>
             </div>
@@ -32,27 +32,27 @@
                     <h3>ADD Money</h3>
                 </div>
 
-                <div id="cashout-box" class="box border p-4 text-center rounded-lg">
+                <div id="cashout-box" class="box cursor-pointer border p-4 text-center rounded-lg">
                     <img class="w-8 mx-auto" src="./assets/send1.png" alt="">
                     <h3>Cash Out</h3>
                 </div>
 
-                <div class="box border p-4 text-center rounded-lg">
+                <div class="box cursor-pointer border p-4 text-center rounded-lg">
                     <img class="w-8 mx-auto" src="./assets/bonus1.png" alt="">
                     <h3>Bonus</h3>
                 </div>
 
-                <div class="box border p-4 text-center rounded-lg">
+                <div class="box cursor-pointer border p-4 text-center rounded-lg">
                     <img class="w-8 mx-auto" src="./assets/money1.png" alt="">
                     <h3>Transfer Money</h3>
                 </div>
 
-                <div class="box border p-4 text-center rounded-lg">
+                <div class="box cursor-pointer border p-4 text-center rounded-lg">
                     <img class="w-8 mx-auto" src="./assets/purse1.png" alt="">
                     <h3>Pay Bill</h3>
                 </div>
 
-                <div class="box border p-4 text-center rounded-lg">
+                <div id="transection-box" class="box cursor-pointer border p-4 text-center rounded-lg">
                     <img class="w-8 mx-auto" src="./assets/transaction1.png" alt="">
                     <h3>Transection History</h3>
                 </div>
@@ -60,7 +60,7 @@
             </div>
 
             <!-- Add Money -->
-            <section id="add-money">
+            <section id="addmoney">
                 <h2>Add Money</h2>
                 <div class="">
                     <div class="hero-content flex-col lg:flex-row-reverse">
@@ -68,7 +68,7 @@
                       <div class="card w-full max-w-sm shrink-0 shadow-2xl">
                         <div class="card-body">
                             <legend>Select Bank</legend>
-                                <select class="select">
+                                <select id="allbank" class="select">
                                   <option disabled selected>Select Bank</option>
                                   <option value="Bkash">Bkash</option>
                                   <option value="Nagad">Nagad</option>
@@ -84,7 +84,7 @@
                                     <label class="fieldset-label">PIN</label>
                                     <input type="text" id="pin" value="1234" class="input" placeholder=" Your PIN" required/>
                                     <div><a class="link link-hover">Forgot password?</a></div>
-                                    <button id="addmoney-btn" class="btn btn-neutral bg-blue-700 border-none mt-4">ADD Money</button>
+                                    <button id="add-money" class="btn btn-neutral bg-blue-700 border-none mt-4">ADD Money</button>
                                   </fieldset>
                         </div>
                       </div>
@@ -116,6 +116,17 @@
             </section>
 
 
+            <!-- Transection History -->
+            <section id="transection-history">
+                <h1 class="text-2xl font-bold text-red-400 text-center"> Transection History</h1>
+
+                <div id="transection-container">
+
+                </div>
+                
+            </section>
+
+
 
         </section>
 
@@ -127,5 +138,7 @@
    <script src="./script/addmoney.js"></script> 
    <script src="./script/toggle.js"></script>
    <script src="./script/cashout.js"></script>
+   <script src="./script/utilities.js"></script>
+   <script src="./script/transectionhistory.js"></script> 
 </body>
 </html>
